改成仓库版本

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,4 @@ bean-searcher.params.pagination.start = 1
 
 logging.level.cn.zhxu.bs: DEBUG
 logging.level.com.example: DEBUG
+logging.level.com.xunmo.bs: DEBUG
