--- a/pom.xml
+++ b/pom.xml
@@ -18,34 +18,20 @@
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.8.11</version>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.3.1</version>
-        </dependency>
-
-
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>cn.zhxu</groupId>
-            <artifactId>bean-searcher-boot-starter</artifactId>
+            <artifactId>bean-searcher</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xunmo</groupId>
+            <artifactId>bean-searcher-adapt-mybatis-starter</artifactId>
             <version>4.1.2</version>
         </dependency>
 
         <dependency>
-            <groupId>cn.zhxu</groupId>
-            <artifactId>xjsonkit-jackson</artifactId>
-            <version>1.4.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
@@ -74,5 +60,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <!-- 曾玉飞 maven 个人仓库 -->
+        <repository>
+            <id>maven-repo-master</id>
+            <url>https://raw.github.com/zengyufei/maven-repo/master/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
